index markup & main sass

--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "Respponsive Portfolio Website",
   "main": "index.js",
-  "dependencies": {
-    "node-sass": "^6.0.0"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "sass": "node-sass -w SCSS/ -o dist/css/ --recursive"
+  
+    "scripts": {
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
   },
   "author": "Tomi West",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "node-sass": "^6.0.0"
+  }
+  
+  
 }
